kubernetes/1-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumeapp-api
  namespace: resumeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resumeapp-api
  template:
    metadata:
      labels:
        app: resumeapp-api
    spec:
      containers:
        - name: resumeapp-api
          image: resumeapp-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
