kubernetes/11-grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: resumeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
              subPath: datasource.yaml
            - name: grafana-config
              mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
              subPath: provider.yaml
            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards/resumeapp-dashboard.json
              subPath: grafana-dashboard.json
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboard-config-configmap
