kubernetes/14-loki-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: resumeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.5.11
          ports:
            - containerPort: 3100
          args:
            - -config.file=/etc/loki/loki-config.yaml
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki/loki-config.yaml
              subPath: loki-config.yaml
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
