kubernetes/2-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumeapp-postgres
  namespace: resumeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resumeapp-postgres
  template:
    metadata:
      labels:
        app: resumeapp-postgres
    spec:
      containers:
        - name: resumeapp-postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          startupProbe:
            tcpSocket:
              port: 5432
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            periodSeconds: 5
            initialDelaySeconds: 5
            failureThreshold: 6
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            periodSeconds: 10
            initialDelaySeconds: 20
            failureThreshold: 3
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: resumeapp-postgres-pvc
