kubernetes/21-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumeapp-web
  namespace: resumeapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: resumeapp-web
  template:
    metadata:
      labels:
        app: resumeapp-web
    spec:
      containers:
        - name: resumeapp-web
          image: paulawenighofer/resumeapp-web:$GITHUB_RUN_NUMBER
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5100
