kubernetes/4-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumeapp-postgres
  namespace: resumeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resumeapp-postgres
  template:
    metadata:
      labels:
        app: resumeapp-postgres
    spec:
      containers:
        - name: resumeapp-postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: resumeapp-postgres-pvc
