kubernetes/12-grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: resumeapp
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30300
