kubernetes/2-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: resumeapp-api-service
  namespace: resumeapp
spec:
  type: ClusterIP
  selector:
    app: resumeapp-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
