kubernetes/22-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: resumeapp-web-service
  namespace: resumeapp
spec:
  type: ClusterIP
  selector:
    app: resumeapp-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5100
