kubernetes/7c-blackbox-exporter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter-service
  namespace: resumeapp
spec:
  type: ClusterIP
  selector:
    app: blackbox-exporter
  ports:
    - port: 9115
      targetPort: 9115
      protocol: TCP
