kubernetes/23-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resumeapp-blazor-ingress
  namespace: resumeapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web.resume-app-pb.duckdns.org
      secretName: resumeapp-tls
  rules:
    - host: web.resume-app-pb.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resumeapp-web-service
                port:
                  number: 80
