kubernetes/3-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resumeapp-web-ingress
  namespace: resumeapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: resumeapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resumeapp-api-service
                port:
                  number: 80
