kubernetes/6-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resumeapp-web-ingress
  namespace: resumeapp
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - resume-app-pb.duckdns.org
      secretName: resumeapp-tls
  rules:
    - host: resume-app-pb.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resumeapp-api-service
                port:
                  number: 80
